<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_weight="1"
        android:background="@color/white">
    </LinearLayout>

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/bg_gradasi">
        <TextView
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp">
        </RelativeLayout>
        <EditText
            android:id="@+id/nik"
            android:paddingLeft="10dp"
            android:drawableStart="@drawable/ic_action_profil"
            android:hint="@string/nik"
            android:background="@drawable/form"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </RelativeLayout>
        <EditText
            android:id="@+id/password"
            android:paddingLeft="10dp"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:background="@drawable/form"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </RelativeLayout>
        <Button
            android:id="@+id/login"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="140dp"
            android:background="@drawable/form"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anda_belum_punya_akun"
            android:textColor="@color/white"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrasi"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18dp"/>
    </LinearLayout>

</LinearLayout>