<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginPetugasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_weight="1"
        android:background="@color/white">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_gradasi"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp">
        </RelativeLayout>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/form"
            android:drawableStart="@drawable/ic_action_profil"
            android:hint="@string/masukkan_username"
            android:paddingLeft="10dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </RelativeLayout>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/form"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"/>


        <RelativeLayout
            android:id="@+id/jarak"
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jarak"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jarak"
            android:layout_gravity="center"
            android:background="@drawable/form"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anda_belum_punya_akun"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silahkan_registrasi_terlebih_dahulu"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>